@@ -1,3 +1,7 @@
+2019-09-10  Charlie Zender  <zender@uci.edu>
+
+	* Implement new SGS for all combinations of levels and missing values
+
 2019-09-09  Charlie Zender  <zender@uci.edu>
 
 	* Fix new SGS by double-weighting (by sgs_frc_in and overlap weight) input values, normalized by sgs_frc_out
